--- a/src/app/people-detail/people-detail.component.html
+++ b/src/app/people-detail/people-detail.component.html
@@ -10,39 +10,9 @@
         <p>Gender: {{people.gender}}</p>
         <div *ngIf="homeworld">
             <p>Homeworld: </p>
-            <a [routerLink]="['/planets/', homeworld.url.substring(30, homeworld.url.length - 1)]">
+            <a [routerLink]="['/planets/', people.homeworld.substring(35, people.homeworld.length)]">
                 {{ homeworld.name }}
             </a>
-        </div>
-        <p>Films: </p>
-        <div *ngFor="let film of films">
-            <a [routerLink]="['/films/', film.url.substring(28, film.url.length - 1)]">
-                {{ film.title }}
-            </a>
-        </div>
-        <div *ngIf="species.length > 0">
-            <p>Species: </p>
-            <div *ngFor="let spec of species">
-                <a [routerLink]="['/species/', spec.url.substring(30, spec.url.length - 1)]">
-                    {{ spec.name }}
-                </a>
-            </div>
-        </div>
-        <div *ngIf="starships.length > 0">
-            <p>Starships: </p>
-            <div *ngFor="let starship of starships">
-                <a [routerLink]="['/starships/', starship.url.substring(32, starship.url.length - 1)]">
-                    {{ starship.name }}
-                </a>
-            </div>
-        </div>
-        <div *ngIf="vehicles.length > 0">
-            <p>Vehicles: </p>
-            <div *ngFor="let vehicle of vehicles">
-                <a [routerLink]="['/vehicles/', vehicle.url.substring(31, vehicle.url.length - 1)]">
-                    {{ vehicle.name }}
-                </a>
-            </div>
         </div>
     </div>
 </div>
