--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -3,13 +3,25 @@
     <input type="text" [(ngModel)]="query" placeholder="Type planet's name">
         <button (click)="search()">Search</button>
 
-    <div *ngIf="planets$ | async as planets">
-        <div *ngFor="let planet of planets.results;">
-            <a [routerLink]="['/planets/', planet.url.substring(30, planet.url.length - 1)]">
-            {{ planet.name }}
-            </a>
+        <div *ngIf="query.length == 0">
+            <div *ngIf="planets$ | async as planets">
+                <div *ngFor="let planet of planets.results">
+                    <a [routerLink]="['/planets/', planet.uid]">
+                    {{ planet.name }}
+                    </a>
+                </div>
+            </div>
         </div>
-    </div>
+    
+        <div *ngIf="query.length > 0">
+            <div *ngIf="planets">
+                <div *ngFor="let planet of planets">
+                    <a [routerLink]="['/planets/', planet.uid]">
+                    {{ planet.properties.name }}
+                    </a>
+                </div>
+            </div>
+        </div>
 
     <button (click)="prevPage()">Prev</button>
     {{page}}
