--- a/src/app/starships-detail/starships-detail.component.html
+++ b/src/app/starships-detail/starships-detail.component.html
@@ -13,16 +13,10 @@
         <p>Hyperdrive rating: {{starship.hyperdrive_rating}}</p>
         <p>MGLT: {{starship.MGLT}}</p>
         <p>Starship class: {{starship.starship_class}}</p>
-        <p>Films: </p>
-        <div *ngFor="let film of films">
-            <a [routerLink]="['/films/', film.url.substring(28, film.url.length - 1)]">
-                {{ film.title }}
-            </a>
-        </div>
         <div *ngIf="people.length > 0">
             <p>Pilots: </p>
             <div *ngFor="let person of people">
-                <a [routerLink]="['/people/', person.url.substring(29, person.url.length - 1)]">
+                <a [routerLink]="['/people/', person.url.substring(34, person.url.length)]">
                     {{ person.name }}
                 </a>
             </div>
