--- a/src/app/vehicles-detail/vehicles-detail.component.html
+++ b/src/app/vehicles-detail/vehicles-detail.component.html
@@ -11,16 +11,16 @@
         <p>Cargo capacity: {{vehicle.cargo_capacity}}</p>
         <p>Consumables: {{vehicle.consumables}}</p>
         <p>Vehicle class: {{vehicle.vehicle_class}}</p>
-        <p>Films: </p>
         <div *ngFor="let film of films">
-            <a [routerLink]="['/films/', film.url.substring(28, film.url.length - 1)]">
+            <p>Films: </p>
+            <a [routerLink]="['/films/', film.url.substring(33, film.url.length)]">
                 {{ film.title }}
             </a>
         </div>
         <div *ngIf="people.length > 0">
             <p>Pilots: </p>
             <div *ngFor="let person of people">
-                <a [routerLink]="['/people/', person.url.substring(29, person.url.length - 1)]">
+                <a [routerLink]="['/people/', person.url.substring(34, person.url.length)]">
                     {{ person.name }}
                 </a>
             </div>
