--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -3,11 +3,23 @@
 
     <input type="text" [(ngModel)]="query" placeholder="Type vehicle's name">
     <button (click)="search()">Search</button>
-    <div *ngIf="vehicles$ | async as vehicles">
-        <div *ngFor="let vehicle of vehicles.results;">
-            <a [routerLink]="['/vehicles/', vehicle.url.substring(31, vehicle.url.length - 1)]">
-            {{ vehicle.name }}
-            </a>
+    <div *ngIf="query.length == 0">
+        <div *ngIf="vehicles$ | async as vehicles">
+            <div *ngFor="let vehicle of vehicles.results">
+                <a [routerLink]="['/vehicles/', vehicle.uid]">
+                {{ vehicle.name }}
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div *ngIf="query.length > 0">
+        <div *ngIf="vehicles">
+            <div *ngFor="let vehicle of vehicles">
+                <a [routerLink]="['/vehicles/', vehicle.uid]">
+                {{ vehicle.properties.name }}
+                </a>
+            </div>
         </div>
     </div>
     <button (click)="prevPage()">Prev</button>
